--- a/src/Pages/Admin/Item/EditItemModal.css
+++ b/src/Pages/Admin/Item/EditItemModal.css
@@ -1,3 +1,5 @@
+/* EDIT ITEM MODAL CSS */
+
 .edit-item-container {
   position: fixed;
   z-index: 99 !important;
@@ -160,4 +162,54 @@
   color: #000000;
   margin: 0%;
   margin-bottom: 2%;
+}
+
+/* ITEM FORM CSS */
+
+.items-input {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.itemsname,
+.description,
+.expiry,
+.image {
+  font-family: 'Inter';
+  font-weight: 400;
+  width: 20vw;
+  height: 40px;
+  border-radius: 10px;
+  border: none;
+  margin-bottom: 20px;
+  padding-inline-start: 5%;
+  padding-inline-end: 5%;
+}
+
+.price,
+.quantity {
+  font-family: 'Inter';
+  font-weight: 400;
+  width: 20vw;
+  height: 40px;
+  border-radius: 10px;
+  border: none;
+  margin-bottom: 20px;
+  padding-inline-start: 5%;
+  padding-inline-end: 5%;
+  appearance: none;
+  -moz-appearance: textfield;
+}
+
+.price::-webkit-outer-spin-button,
+.price::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.quantity::-webkit-outer-spin-button,
+.quantity::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
